// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`processSeriesData basic processing should generate a header and fix widths 1`] = `
Object {
  "fields": Array [
    Object {
      "name": "Field 1",
    },
    Object {
      "name": "Field 2",
    },
    Object {
      "name": "Field 3",
    },
  ],
  "rows": Array [
    Array [
      1,
      null,
      null,
    ],
    Array [
      2,
      3,
      4,
    ],
    Array [
      5,
      6,
      null,
    ],
  ],
}
`;

exports[`processSeriesData basic processing should read header and two rows 1`] = `
Object {
  "fields": Array [
    Object {
      "name": "a",
    },
    Object {
      "name": "b",
    },
    Object {
      "name": "c",
    },
  ],
  "rows": Array [
    Array [
      1,
      2,
      3,
    ],
    Array [
      4,
      5,
      6,
    ],
  ],
}
`;
